export interface ElementoMenu {

    getPrecio(): number;
    getNombre(): string;

}