export enum EstadoPedido {
    EN_CONSTRUCCION = "EN_CONSTRUCCION",
    CONFIRMADO = "CONFIRMADO",
    LISTO = "LISTO",
    FACTURADO = "FACTURADO"
}