@startuml
title -Gestión de Pedidos:-
class Restaurante {
    -nombre: String
    -menu: Menu
    -estaciones: List<Estacion>
    -pedidosActivos: List<Pedido>
    -pedidosFinalizados: List<Pedido>

    +agregarPedido(pedido: Pedido)
    +consultarHistorial(): List<Pedido>
    +facturarPedido(pedido: Pedido)
}

class Menu {
    -categorias: List<Categoria>
    -productos: List<Producto>
    -combos: List<Combo>
}

class Categoria {
    -nombre: String
}

interface ElementoMenu {
    +getPrecio(): number
    +getNombre(): String
}

class Combo implements ElementoMenu {
    -nombre: String
    -productos: List<Producto>
    +getPrecio(): number
    +getNombre(): String
}

interface ComboBeneficio {
    +aplicarBeneficio(productos: List<Producto>): number
}

class ComboPorcentual implements ComboBeneficio {
    -porcentajeDescuento: number
    +aplicarBeneficio(productos: List<Producto>): number
}

class ComboPrecioFijo implements ComboBeneficio {
    -precioFijo: number
    +aplicarBeneficio(productos: List<Producto>): number
}

abstract class Pedido {
    -numeroPedido: int
    -nombreCliente: String
    -fecha: Date
    -estado: EstadoPedido
    -items: List<Item>
    -historialModificaciones: Stack<Item>

    +agregarItem(elemento: ElementoMenu, cantidad: int)
    +quitarItem(item: Item)
    +deshacerUltimaModificacion()
    +confirmarPedido()
    +puedeFacturarse(): boolean
    +calcularTotalBruto(): number
    +aplicarDescuento(): number
    +calcularTotalFinal(medioPago: MedioDePago, diaActual: DiaSemana): number
}

class PedidoSalon {
    -numeroMesa: int
    -mozo: String
}

class PedidoRetirar {
    -horarioRetiro: Date
}

class PedidoEnvioPropio {
    -direccion: String
    -costoEnvio: number
}

class Item {
    -cantidad: int
    -estado: EstadioItem
    
    +avanzarEstado()
    +esModificable(): boolean
}

class Estacion {
    -nombre: String
    -categorias: List<Categoria>
    -items: List<Item>

    +agregarItem(item: Item)
    +avanzarItem(item: Item)
    +aceptaCategoria(categoria: Categoria): boolean
}

class Producto implements ElementoMenu {
    -nombre: String
    -precioDeVenta: number
    -categoria: Categoria
    
    +getCategoria(): Categoria
    +getPrecio(): number
    +getNombre(): String
}

interface MedioDePago {
    +procesarPago(monto: number): boolean
}

class Efectivo implements MedioDePago {
    -aplicaDescuentoEfectivo: boolean
}

class TarjetaDebito implements MedioDePago {
    -numeroTarjeta: String
}

class TarjetaCredito implements MedioDePago {
    -numeroTarjeta: String
    -cuotas: int
}

class BilleteraVirtual implements MedioDePago {
    -alias: String
}

/' abstract class Descuento {
     +esAplicable(pedido: Pedido, dia: DiaSemana): boolean
     +calcularMontoDescuento(pedido: Pedido): number
}

class DescuentoEfectivo extends Descuento {
    -porcentaje: number
    +esAplicable(pedido: Pedido, dia: DiaSemana): boolean
    +calcularMontoDescuento(pedido: Pedido): number
}

class DescuentoDiaEspecial extends Descuento {
    -diaObjetivo: DiaSemana
    -porcentaje: number
    +esAplicable(pedido: Pedido, dia: DiaSemana): boolean
    +calcularMontoDescuento(pedido: Pedido): number
} '/

enum EstadoPedido {
    EN_CONSTRUCCION,
    CONFIRMADO,
    LISTO,
    FACTURADO
}

enum EstadioItem {
    PENDIENTE,
    EN_PREPARACION,
    LISTO
}

enum DiaSemana {
    LUNES, MARTES, MIERCOLES, JUEVES, VIERNES, SABADO, DOMINGO
}

' Relaciones Estructurales
Restaurante *-- Menu
Restaurante  *-- Estacion
Restaurante *-l-  Pedido
Restaurante *-r- MedioDePago
Menu  *-- Categoria
Menu  *-- Producto
Menu  *--Combo
Combo  *--  ComboBeneficio
Pedido  *--  Item
Item  *--  ElementoMenu
Estacion  *-- Item

Pedido <|-- PedidoSalon
Pedido <|-- PedidoRetirar
Pedido <|-- PedidoEnvioPropio

@enduml